Add admin login page and protected admin panel

--- a/Mangal Rice _ Online Rice Ordering System.html
+++ b/Mangal Rice _ Online Rice Ordering System.html
@@ -165,7 +165,8 @@
   <a href="file:///C:/Users/USER/Desktop/school/softwares/mangal.hmtl.html#database">Database</a>
   <a href="file:///C:/Users/USER/Desktop/school/softwares/mangal.hmtl.html#delivery">Delivery</a>
   <a href="file:///C:/Users/USER/Desktop/school/softwares/mangal.hmtl.html#contact">Contact</a>
-  <a href="file:///C:/Users/USER/Desktop/school/softwares/mangal.hmtl.html#admin">Admin</a>
+  <a href="admin-login.html">Admin</a>
+
 </nav>
 
 <header id="home">
@@ -201,7 +202,7 @@
   <h2>Rice Products</h2>
   <div class="grid">
     <div class="box">
-      <img src="https://images.unsplash.com/photo-1604908554269-8e9a66c98c0b">
+      <img src="White rice.jpg">
       <h3>Premium White Rice</h3>
       <p>High-quality, stone-free long grain rice.</p>
     </div>
@@ -211,7 +212,7 @@
       <p>Healthy rice rich in fiber and nutrients.</p>
     </div>
     <div class="box">
-      <img src="https://images.unsplash.com/photo-1625944525533-473f1a30a7a1">
+      <img src="local rice.jpg">
       <h3>Local Rice</h3>
       <p>Traditional taste with modern processing.</p>
     </div>
@@ -323,27 +324,6 @@
       <a href="https://www.instagram.com/mangal_rice?igsh=MWhkdXl5cGNrZzFrZw==" target="_blank">
         <button>Visit Instagram</button>
       </a>
-    </div>
-  </div>
-</section>
-
-<section id="admin">
-  <h2>Admin Panel (Simulation)</h2>
-  <div class="grid">
-    <div class="box">
-      <h3>Order Management</h3>
-      <p>View and manage customer orders.</p>
-      <button onclick="viewOrders()">View Orders</button>
-    </div>
-    <div class="box">
-      <h3>Payment Monitoring</h3>
-      <p>Track payment verification status.</p>
-      <button onclick="viewPayments()">View Payments</button>
-    </div>
-    <div class="box">
-      <h3>Delivery Control</h3>
-      <p>Monitor delivery progress and completion.</p>
-      <button onclick="viewDelivery()">View Delivery Status</button>
     </div>
   </div>
 </section>
